src/objects/Administrative_Actions__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date_Old__c</fullName>
        <formula>CASE(RecordTypeId , &quot;012600000004ydt&quot;,  Exit_Date__c , &quot;012600000004yeD&quot;,  Extension_Date__c ,&quot;012600000004yeI&quot;, Re_Instatement_Date__c ,&quot;012600000004yeN&quot;, Re_Intake_Date__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Date Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activities_Engaged_in_at_Exit__c</fullName>
        <label>Activities Engaged in at Exit</label>
        <picklist>
            <picklistValues>
                <fullName>Employed Full-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed Part-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In HSE Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Outpatient Drug Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Outpatient MH Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Residential Drug Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Residential MH Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Vocational Training Program</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Administrative_Actions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Old__c</fullName>
        <formula>If(OR( Exit_Notification_Approved__c ,  Reinstatement_Approved__c,   Re_Intake_Approved__c ,  Extension_Decision_Approved__c),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBO_Activity__c</fullName>
        <label>CBO Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Employed Full-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed Part-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In HSE/pre-HSE Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Outpatient Drug Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Outpatient MH Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Vocational Training Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Youth Development Programming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBO_Closing_Date__c</fullName>
        <label>CBO Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEP__c</fullName>
        <inlineHelpText>CEP# is generated when the outcome in the intake case is set to INTAKE. In other words, when a client becomes an actual intake.</inlineHelpText>
        <label>CEP #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <formula>Text(Client__r.Client_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Team_Director__c</fullName>
        <formula>Client__r.Team_Leader__r.FirstName &amp; &apos; &apos; &amp;  Client__r.Team_Leader__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Team Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Team_Director_id__c</fullName>
        <formula>Client__r.Team_Leader__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Team Director Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Administrative Action</relationshipLabel>
        <relationshipName>Administrative_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Community_Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Placement</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Administrative_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Participant was in the program between 30 and 119 days and out of the program for less than 60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participants was in the program at least 120 days and out of the program for less than 120 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant was in the program for less than 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant was in the program between 30 &amp; 119 days &amp; out of the program 60 days or longer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant was in the program at least 120 days &amp; out of the program 120 days or longer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant does not fit above criteria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditions_for_Reinstatement__c</fullName>
        <label>Conditions for Reinstatement</label>
        <picklist>
            <picklistValues>
                <fullName>Participant was in the program between 30 and 119 days and out of the program for less than 60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participants was in the program at least 120 days and out of the program for less than 120 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant does not fit above criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Entered</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conditions_for_Reintake__c</fullName>
        <label>Conditions for Re-Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Participant was in the program for less than 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant was in the program between 30 &amp; 119 days &amp; out of the program 60 days or longer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant was in the program at least 120 days &amp; out of the program 120 days or longer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant does not fit above criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Entered</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contributing_Factors__c</fullName>
        <label>Contributing Factors</label>
        <picklist>
            <picklistValues>
                <fullName>Develop. Disability/Cognitive impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gang Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homelessness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of or Insufficient Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rearrest</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Court_Rep_Comments_Reinstatement__c</fullName>
        <label>Court Rep Comments (Reinstatement)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Court_Rep_Comments_Reintake__c</fullName>
        <label>Court Rep Comments (Re-Intake)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Court_Rep_Comments__c</fullName>
        <label>Court Rep Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Court_Rep_Interview_Date__c</fullName>
        <label>Court Rep Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Court_Rep_ReIntake_Interview_Date__c</fullName>
        <label>Court Rep Re-Intake Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Court_Rep_Reinstatement_Interview_Date__c</fullName>
        <label>Court Rep Reinstatement Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Orientation_Date__c</fullName>
        <label>Current Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Projected_Exit_Date__c</fullName>
        <formula>Client__r.Current_Projected_Exit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Projected Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_the_Intake_Judge_Order_the_Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did the Intake Judge Order the Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doesnt_Fit_Criteria_Comments__c</fullName>
        <label>Doesn&apos;t Fit Criteria Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doesnt_fit_ReIntake_criteria_comments__c</fullName>
        <label>Doesn&apos;t Fit Re-Intake Criteria, Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doesnt_fit_Reinstate_Criteria_Comments__c</fullName>
        <label>Doesn&apos;t Fit Reinstate Criteria, Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exit_Date_1__c</fullName>
        <label>Original Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Notification_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exit Notification Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N60000001PTP5EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exit_Notification_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exit Notification Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exit_Notification_Comments__c</fullName>
        <label>Exit Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exit_Reason__c</fullName>
        <label>Exit Reason</label>
        <picklist>
            <controllingField>Exit_Type__c</controllingField>
            <picklistValues>
                <fullName>Successfully completed program, without modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to residential drug treatment on or after projected exit date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to residential, non drug treatment on or after projected exit date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake case dismissed or defendant acquitted after trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intake judge relieved participant of supervision (includes early graduation due to imposition of a reduced sentence)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never reported for orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped reporting to CEP altogether</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unacceptably sporadic attendance (for counseling and/or program plan activities)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed to follow up on case manager referrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed serious violation of CEP rules and regulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged in on-going criminal activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remanded by intake judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violated by Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indicted on rearrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exited for pending unindicted felony rearrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exited for multiple rearrests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed to appear for a court date; bench warrant ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant seriously incapacitated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant died</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void intake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to drug treatment program before projected exit date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to non-drug treatment program before projected exit date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Exit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exit_Type__c</fullName>
        <label>Exit Type</label>
        <picklist>
            <picklistValues>
                <fullName>(S) Successful Exit/ Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(U) Unsuccessful Exit/ Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(T) Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Z) Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(V) Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension_Date__c</fullName>
        <description>This is a field that has been introduced so that Eve can migrate all the extension data.

We can then setup a workflow rule for it (and activate after the migration) that automatically populates this field with the value TODAY() when the user saves the record.</description>
        <label>Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Decision_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extension Decision Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N60000001PU71EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extension_Decision_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extension Decision Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Date_Back_in_the_Program__c</fullName>
        <label>First Date Back in the Program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Living_Situation_at_Exit__c</fullName>
        <label>Living Situation at Exit</label>
        <picklist>
            <picklistValues>
                <fullName>Affordable housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent Supportive Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private/Market Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street Homeless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transitional Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Exit_Date__c</fullName>
        <label>New Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Projected_Exit_Date__c</fullName>
        <label>New Projected Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Num_of_Admin_Action__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num of Admin Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Days_in_the_Program__c</fullName>
        <formula>if( contains(RecordType.DeveloperName, &quot;Exit_Notification&quot;),

Client__r.Number_of_Days_in_Program__c 
+ if( ispickval(Client__r.Client_Status__c, &quot;Active&quot;), today() - Action_Date__c , 0 ),

null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Active and On Program Hold clients, the projected number of days the client will have been in CEP by the time they are exited. For Exited clients, the actual number of days there were in CEP.</inlineHelpText>
        <label>Number Of Days in the Program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Orientation_Date__c</fullName>
        <label>Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Exit_Date__c</fullName>
        <label>Old Original Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Projected_Exit_Date__c</fullName>
        <label>Original Projected Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_C_ID__c</fullName>
        <formula>Client__r.P_C_ID__c</formula>
        <label>P/C ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Status__c</fullName>
        <label>Placement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Projected_Exit_Date__c</fullName>
        <description>Populated from the contact page field &quot;Current Projected Exit Date&quot; before that field is updated with the new projected exit date entered on an extension. The field is used to make sure that clients are not back-enrolled in classes when they receive an extension.</description>
        <label>Previous Projected Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_Instatement_Date__c</fullName>
        <label>Re-Instatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_Intake_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Intake Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Intake_Date__c</fullName>
        <label>Re-Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_intake_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Re-intake Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Administrative_Actions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Extension__c</fullName>
        <label>Reason for Extension</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reinstatement Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Administrative_Actions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinstatement Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Must_be_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reinstatement Must be Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N60000001PU7BEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reintake_Must_be_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reintake Must be Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Administrative_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sentence_Date__c</fullName>
        <label>Sentence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sort_Date__c</fullName>
        <description>Used in contactMethods to determine the date order of administrative actions. Could also be used in related lists to sort.</description>
        <formula>BLANKVALUE( New_Projected_Exit_Date__c ,  Action_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <picklist>
            <picklistValues>
                <fullName>Done On Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Extension__c</fullName>
        <label>Type of Extension</label>
        <picklist>
            <picklistValues>
                <fullName>Voluntary Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory Extension</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Administrative Actions</label>
    <listViews>
        <fullName>Admin_Actions1</fullName>
        <columns>NAME</columns>
        <columns>Approved_By__c</columns>
        <columns>CEP__c</columns>
        <columns>Client__c</columns>
        <columns>Exit_Date__c</columns>
        <columns>Exit_Type__c</columns>
        <columns>Extension_Date__c</columns>
        <columns>Re_Instatement_Date__c</columns>
        <columns>Re_Intake_Date__c</columns>
        <columns>New_Projected_Exit_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Admin Actions</label>
    </listViews>
    <listViews>
        <fullName>Extensions</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Original_Projected_Exit_Date__c</columns>
        <columns>New_Projected_Exit_Date__c</columns>
        <columns>Approved_By__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>P_C_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Administrative_Actions__c.Extension,Administrative_Actions__c.Extension_Locked</value>
        </filters>
        <label>Extensions</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Admin Actions ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Administrative Actions</pluralLabel>
    <recordTypes>
        <fullName>ExitNotification</fullName>
        <active>true</active>
        <description>An Exit Notification Form for Graduation, Discharge or Transfer</description>
        <label>Exit Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exit_Notification_Locked</fullName>
        <active>true</active>
        <description>___ SYSTEM USE ONLY - Do not select!</description>
        <label>Exit Notification - Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extension</fullName>
        <active>true</active>
        <description>Extension Form for a Client</description>
        <label>Extension</label>
    </recordTypes>
    <recordTypes>
        <fullName>Extension_Locked</fullName>
        <active>true</active>
        <description>___ SYSTEM USE ONLY - Do not select!</description>
        <label>Extension - Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReInstatement</fullName>
        <active>true</active>
        <description>Re-instatement Form for a Client</description>
        <label>Re-Instatement</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReIntake</fullName>
        <active>true</active>
        <description>Re-intake Form for a Client</description>
        <label>Re-Intake</label>
    </recordTypes>
    <recordTypes>
        <fullName>Re_Instatement_locked</fullName>
        <active>true</active>
        <description>___ SYSTEM USE ONLY - Do not select!</description>
        <label>Re-Instatement - locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Re_Intake_Locked</fullName>
        <active>true</active>
        <description>___ SYSTEM USE ONLY - Do not select!</description>
        <label>Re-Intake - Locked</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Does_not_fit_criteria</fullName>
        <active>true</active>
        <description>Required if Participant does not Fit above criteria selected for Conditions for Reinstatement.&quot;</description>
        <errorConditionFormula>AND( ISPICKVAL( Conditions__c  , &quot;Participant does not fit above criteria&quot;),   isblank(Doesnt_Fit_Criteria_Comments__c ))</errorConditionFormula>
        <errorDisplayField>Doesnt_Fit_Criteria_Comments__c</errorDisplayField>
        <errorMessage>If the participant does not fit the criteria, you must add comments in the &quot;Doesn&apos;t Fit Criteria Comments&quot; box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Save_AA_before_approving</fullName>
        <active>true</active>
        <description>Must save before approving</description>
        <errorConditionFormula>and(ISNEW()=true, ispickval(Approved__c, &quot;Yes&quot;))</errorConditionFormula>
        <errorMessage>You must save the form before you can approve it. Please clear the check mark from the approval box and save again. Then edit, check approved, and save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Task_Status_on_Exit_Type</fullName>
        <active>true</active>
        <description>Task Status cannot be saved with a value of &quot;Done on Time&quot; or &quot;Incomplete&quot; if the Exit Type is not &quot;(S) Successful Exit/ Graduation&quot;.</description>
        <errorConditionFormula>IF(ISPICKVAL(Task_Status__c , &quot;Done On Time&quot;) ,  IF( ISPICKVAL( Exit_Type__c , &quot;(S) Successful Exit/ Graduation&quot;) , false, true) ,  IF( ISPICKVAL(Task_Status__c ,  &quot;Incomplete&quot;) , IF( ISPICKVAL( Exit_Type__c , &quot;(S) Successful Exit/ Graduation&quot;) , false, true), false) )</errorConditionFormula>
        <errorMessage>Task Status cannot be saved with a value of &quot;Done on Time&quot; or &quot;Incomplete&quot; if the Exit Type is not &quot;(S) Successful Exit/ Graduation&quot;.</errorMessage>
    </validationRules>
</CustomObject>